--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^3.1.1",
+    "mdb-angular-ui-kit": "^4.1.0",
+    "mdb-ui-kit": "^6.4.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.27",
+    "swiper": "^10.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
